Revise love message in main.html
Updated the message in the script section to express gratitude and love more clearly.

--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@ section{max-width:1100px;margin:auto;padding:30px;}
 </section>
 
 <script>
-let msg="Dear Annammo 🤍,\n\nThank you for being my love and my happiness 🥹🤍💎\nYou are my peace, my comfort, my smile, my home ❤️\nEvery heartbeat chooses you 💖\n\nForever yours,\nAmal ❤️";
+let msg="Dear Annammo 🤍,\n\n In our journey thankyou for beign my happiness,my supporter and point to point in my life 🥹🤍💎\nyou are my favorite person for ever ❤️\nevery thing about you is so buitiful you have always been my favorite human beign\n\nForever yours,\nAmal ❤️";
 let i=0;
 function type(){
  if(i<msg.length){
@@ -85,4 +85,5 @@ function openStory(){
 </script>
 
 </body>
+
 </html>
