Revise Love World page content and interactions
Updated the HTML content and JavaScript functionality for the Love World page, including changes to messages and unlocking conditions.

--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@ type();
 let c=0;
 function tap(){
  c++;count.innerText="Clicks: "+c;
- if(c>=5){unlock.innerText="You unlocked my forever love 🥹💖💎";}
+ if(c>=5){unlock.innerText="happy valentines day dear valentine 🥹💖💎";}
 }
 
 function openStory(){
@@ -87,3 +87,4 @@ function openStory(){
 </body>
 
 </html>
+
