--- a/lock.html
+++ b/lock.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Love Gate</title>
+<title>DEAR VALENTINE</title>
 <style>
 body{
  margin:0;height:100vh;background:black;
@@ -29,8 +29,8 @@ button{
 <body>
 
 <div class="gate">
-<h2>🔐 Love Gate</h2>
-<p>Only love can unlock 💖</p>
+<h2>🔐 our date</h2>
+<p>Only we can unlock 💖</p>
 <input type="password" id="pass" placeholder="Secret code">
 <br>
 <button onclick="openGate()">Enter 💎</button>
@@ -39,7 +39,7 @@ button{
 
 <script>
 function openGate(){
- if(pass.value==="annammo"){
+ if(pass.value==="28042025"){
   window.location.href="intro.html";
  }else{
   msg.innerText="Wrong code 💔";
@@ -48,4 +48,5 @@ function openGate(){
 </script>
 
 </body>
+
 </html>
